DEPRECATED/Kubernetes/K3S/Registry/registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - image: registry
          imagePullPolicy: IfNotPresent
          name: registry
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: pvc-nfs-k3s-registry-volume
              mountPath: /var/lib/registry
              subPath: registry
      volumes:
        - name: pvc-nfs-k3s-registry-volume
          persistentVolumeClaim:
            claimName: pvc-nfs-k3s-registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry-svc
  namespace: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-http
  namespace: registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/href: "https://registry.k3s.wiserisk.be"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Registry
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: docker.svg
    gethomepage.dev/app: registry
    gethomepage.dev/name: Registry
spec:
  rules:
    - host: registry.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-svc
                port:
                  number: 5000
